feat: configuração da aplicação