@@ -2,6 +2,7 @@ package iasd.coral.webservice.core.service;
 
 import iasd.coral.webservice.config.exception.ResourceNotFoundException;
 import iasd.coral.webservice.core.dto.CriancaDTO;
+import iasd.coral.webservice.core.mapper.CriancaMapper;
 import iasd.coral.webservice.core.model.Crianca;
 import iasd.coral.webservice.core.model.Usuario;
 import iasd.coral.webservice.core.repository.CriancaRepository;
@@ -22,29 +23,20 @@ public class CriancaService {
     @Autowired
     private UsuarioRepository usuarioRepository;
 
+    @Autowired
+    private CriancaMapper criancaMapper;
+
     @Transactional
     public Crianca adicionarFilho(CriancaDTO dto, String emailPai) {
         Usuario pai = usuarioRepository.findByEmail(emailPai)
                 .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado"));
-
-        Crianca crianca = new Crianca();
-        crianca.setNome(dto.getNome());
-        crianca.setDataNascimento(dto.getDataNascimento());
-        crianca.setPai(pai);
-        crianca.setSaldoTonzinhos(0);
-        crianca.setObservacoes(dto.getObservacoes());
-        crianca.setAtivo(true);
-
-        return criancaRepository.save(crianca);
+        return criancaRepository.save(criancaMapper.mapear(dto, pai));
     }
 
     public List<CriancaDTO> listarFilhos(String emailPai) {
-        Usuario pai = usuarioRepository.findByEmail(emailPai)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado"));
-
-        return criancaRepository.findByPaiId(pai.getId()).stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+        return criancaRepository.findByPaiEmail(emailPai).stream()
+                .map(criancaMapper::mapear)
+                .toList();
     }
 
     public Integer consultarSaldo(Long criancaId) {
@@ -56,17 +48,7 @@ public class CriancaService {
     public List<CriancaDTO> getAniversariantesDoMes() {
         int mesAtual = LocalDate.now().getMonthValue();
         return criancaRepository.findAniversariantesDoMes(mesAtual).stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-    }
-
-    private CriancaDTO toDTO(Crianca crianca) {
-        CriancaDTO dto = new CriancaDTO();
-        dto.setId(crianca.getId());
-        dto.setNome(crianca.getNome());
-        dto.setDataNascimento(crianca.getDataNascimento());
-        dto.setSaldoTonzinhos(crianca.getSaldoTonzinhos());
-        dto.setObservacoes(crianca.getObservacoes());
-        return dto;
+                .map(criancaMapper::mapear)
+                .toList();
     }
 }
